20250211h 主としてindex.mdの編集

--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Franklin = "713c75ef-9fc9-4b05-94a9-213340da978e"
+GMT = "5752ebe1-31b9-557e-87aa-f909b540aa54"
 NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
